feat: introduce users data, add navigation bar, create home and users pages, and update routing.

--- a/app/components/navbar.html
+++ b/app/components/navbar.html
@@ -5,6 +5,7 @@
     <div class="hidden md:flex space-x-8 items-center">
         <a href="#/home" class="text-gray-600 hover:text-blue-600 transition">Home</a>
         <a href="#/divisions" class="text-gray-600 hover:text-blue-600 transition">Divisions</a>
+        <a href="#/users" class="text-gray-600 hover:text-blue-600 transition">Users</a>
         <a href="#/about" class="text-gray-600 hover:text-blue-600 transition">About</a>
         <a href="https://github.com/yuumuu" target="_blank" class="text-gray-600 hover:text-blue-600 transition"
             title="GitHub">
