--- a/app/components/navbar.html
+++ b/app/components/navbar.html
@@ -3,10 +3,11 @@
         <a href="#/" class="text-xl font-bold text-blue-600">Framework</a>
     </div>
     <div class="hidden md:flex space-x-8 items-center">
-        <a href="#/home" class="text-gray-600 hover:text-blue-600 transition">Home</a>
-        <a href="#/divisions" class="text-gray-600 hover:text-blue-600 transition">Divisions</a>
+        <a href="#/" class="text-gray-600 hover:text-blue-600 transition">Home</a>
+        <!-- <a href="#/divisions" class="text-gray-600 hover:text-blue-600 transition">Divisions</a> -->
         <a href="#/users" class="text-gray-600 hover:text-blue-600 transition">Users</a>
         <a href="#/about" class="text-gray-600 hover:text-blue-600 transition">About</a>
+
         <a href="https://github.com/yuumuu" target="_blank" class="text-gray-600 hover:text-blue-600 transition"
             title="GitHub">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
